Updated how instructor did in class.

--- a/test/examples_test/CMakeLists.txt
+++ b/test/examples_test/CMakeLists.txt
@@ -1,3 +1,4 @@
+#To add the module to CMAKE, add/remove the # infront of the ADD.
 ADD_SUBDIRECTORY(01_module_test)
 #ADD_SUBDIRECTORY(02_module_test)
 #ADD_SUBDIRECTORY(03_module_test)
