Learned Bool Expressions, cin and if examples. Did a little ternary

--- a/test/examples_test/CMakeLists.txt
+++ b/test/examples_test/CMakeLists.txt
@@ -1,6 +1,6 @@
-#To add the module to CMAKE, add/remove the # infront of the ADD.
+#To add/remove the module to CMAKE, add/remove the # infront of the ADD.
 ADD_SUBDIRECTORY(01_module_test)
-#ADD_SUBDIRECTORY(02_module_test)
+ADD_SUBDIRECTORY(02_module_test)
 #ADD_SUBDIRECTORY(03_module_test)
 #ADD_SUBDIRECTORY(04_module_test)
 #ADD_SUBDIRECTORY(09_module_test)
